deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
  annotations:
    # Backstage (027): links this workload to the catalog component.
    backstage.io/kubernetes-id: todo
spec:
  selector:
    app: todo
  ports:
    - port: 80
      targetPort: 8080
