deploy/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo
spec:
  parentRefs:
    - name: cilium-gateway-https
      namespace: flux-system
      sectionName: https-wildcard # shared *.nezam.site listener
  hostnames:
    - todo-staging.nezam.site
  rules:
    - backendRefs:
        - name: todo
          port: 80
